fichier_yml_azure_vote/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-vote-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-vote-back
  template:
    metadata:
      labels:
        app: azure-vote-back
    spec:
      volumes:
      - name: monstorage
        persistentVolumeClaim:
          claimName: monpvc # Appel du persistentclaimvolume crée dans pvc.yml
      containers:
      - name: azure-vote-back
        image: redis
        args: ["--requirepass", "$(REDIS_PWD)"]
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts: #point de montage dans le pod
        - mountPath: "/mnt/azure"
          name: monstorage #/data/monstorage
