fichier_yml_azure_vote/votin-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-vote-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: azure-vote-front
  template:
    metadata:
      labels:
        app: azure-vote-front
    spec:
      containers:
        # resources:
        #   requests:
        #     cpu: 250m
        #   limits:
        #     cpu: 500m 
      - name : azure-vote-front
        image: whujin11e/public:azure_voting_app
