fichier_yml_azure_vote/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-back
spec:
  type: ClusterIP
  ports:
  - port: 6379
  selector:
    app: azure-vote-back
